[gd_scene load_steps=4 format=3 uid="uid://c4jyprru63f33"]

[ext_resource type="Texture2D" uid="uid://3e531b34sgv4" path="res://Sprites/Componentes16x128.png" id="1_nqxaq"]
[ext_resource type="Script" path="res://Scripts/SizeIncreaserHover.gd" id="2_d6q1v"]
[ext_resource type="Theme" uid="uid://clsy0gnar0bin" path="res://Scene/Prefabs/tooltiptheme.tres" id="3_cakds"]

[node name="Sprite2D" type="Sprite2D"]
position = Vector2(4.76837e-07, 0)
scale = Vector2(3, 3)
texture = ExtResource("1_nqxaq")
hframes = 8
script = ExtResource("2_d6q1v")

[node name="ButtonPrefab" type="TextureButton" parent="."]
offset_left = -5.0
offset_top = -8.0
offset_right = 5.0
offset_bottom = 8.0
theme = ExtResource("3_cakds")

[connection signal="mouse_entered" from="ButtonPrefab" to="." method="_on_button_prefab_mouse_entered"]
[connection signal="mouse_exited" from="ButtonPrefab" to="." method="_on_button_prefab_mouse_exited"]
